--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.2质押选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.2质押选项.md
@@ -18,4 +18,4 @@
 * [管理持有的ICP](管理持有的ICP.md) 
 * [ICP托管选项](ICP托管选项.md) 
 * [使用种子短语和不联网计算机进行ICP托管](使用种子短语和不联网计算机进行ICP托管.md) 
-* [使用NNS frontend dapp进行 ICP质押](使用NNS frontend dapp进行 ICP质押.md) 
+* [使用NNS frontend dapp进行 ICP质押](https://wiki.internetcomputer.org/wiki/ICP_staking_with_NNS_frontend_dapp) 
