--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.3投票选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.3投票选项.md
@@ -2,7 +2,7 @@
 投票是ICP治理的重要部分，因为它关系着社区如何控制互联网计算机。
 
 ## NNS奖励
-每天NNS会产生NNS奖励，这些奖励会分给当天投过票的神经元。
+每天NNS都会产生NNS奖励，这些奖励会分给当天投过票的神经元。
 
 ## 查看提案
 两种最常见的查看提案的方式是:
