--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2管理持有的ICP.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2管理持有的ICP.md
@@ -41,7 +41,7 @@
 你可以根据自己的舒适程度进行选择，关于可选择范围的总结，请参阅[ICP托管选项](托管选项.md)。
 
 ## 3 质押
-一旦你决定了托管，质押就是用溶解延迟锁定一个神经元内的ICP。[质押和投票](https://wiki.internetcomputer.org/wiki/Staking_and_voting)是[互联网计算机治理](https://wiki.internetcomputer.org/wiki/Governance_of_the_Internet_Computer)的关键。
+一旦你决定了托管，质押就是用溶解延迟锁定一个神经元内的ICP。[质押和投票](https://wiki.internetcomputer.org/wiki/Staking_and_voting)是[互联网计算机治理](互联网计算机的治理.md)的关键。
 
 通过质押，你可以对NNS提案投票并收集NNS奖励。有许多种植牙的选择，每一种都有不同的安全性和可用性权衡。参见[ICP质押选项](质押选项.md)。
 
@@ -50,7 +50,7 @@
 投票是使用神经元对神经网络提案进行投票的行为。请参阅[ICP投票选项](投票选项.md)。
 
 ## 5 另请参阅：
-* [互联网计算机的治理](https://wiki.internetcomputer.org/wiki/Governance_of_the_Internet_Computer)
+* [互联网计算机的治理](互联网计算机的治理.md)
 * [质押和投票](https://wiki.internetcomputer.org/wiki/Staking_and_voting)
 
 ## 6 外部链接
