--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.3质押、投票和奖励.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.3质押、投票和奖励.md
@@ -14,7 +14,7 @@
 
 就像代币存放在用户的账户中一样，股份也存放在一个称为“神经元”的特殊账户中。每个神经元都有自己的标识符，以及与其权益相关的几个属性。这些包括：
 
-- 锁定的时间长度（“解散延迟”）；
+- 锁定的时间长度（“溶解延迟”）；
 - 它目前是否正在向流动性方向溶解；
 - 以及由于对提案进行投票而获得了多少奖励（“成熟度”）。
 
@@ -27,16 +27,16 @@
 锁定神经元的投票权由几个因素决定：
 
 - 主要是通过它的股份。1 ICP = 1 票。
-- 接下来，通过其锁定持续时间，或解除延迟。6 个月可获得 1.06 倍的投票权红利，8 年可获得 2 倍的投票权红利。所有其他持续时间在两者之间线性缩放。
-- 最后，根据它的年龄，或在没有解散的情况下被锁定的时间长度。4 年可获得 1.25 倍的奖金，与任何其他奖金相乘。0 秒到 4 年之间的所有其他持续时间在两者之间呈线性比例。
+- 接下来，通过其锁定持续时间，或溶解延迟。6 个月可获得 1.06 倍的投票权红利，8 年可获得 2 倍的投票权红利。所有其他持续时间在两者之间线性缩放。
+- 最后，根据它的年龄，或在没有溶解的情况下被锁定的时间长度。4 年可获得 1.25 倍的奖金，与任何其他奖金相乘。0 秒到 4 年之间的所有其他持续时间在两者之间呈线性比例。
 
 这意味着每个 ICP 质押 2.5 票的最大投票权只有通过将您的神经元锁定 8 年并使其处于锁定状态 4 年才能实现。届时，您将对所承诺的股份拥有最大的投票权。
 
-### 到期
+### 成熟度（到期）
 
 成熟度代表神经元中累积的投票奖励。每天，网络通过向每个投票神经元分配总奖励的一部分来奖励参与者，这既基于其在提出提案时的投票权，也基于其投票的提案数量。
 
-有些人将到期日视为类似于“股息”或“利息”，但请注意，不同的税务机关可能对此问题有不同的看法。ICP 利益相关者在决定对何时到期成为收入的解释之前，应咨询适当的专业人士。
+有些人将到期日视为类似于“股息”或“利息”，但请注意，不同的税关可能对此问题有不同的看法。ICP 利益相关者在决定对何时到期成为收入之前，应咨询适当的专业人士。
 
 对于那些希望在他们的神经元中复合收益的人来说，最自然的活动是每隔一段时间“合并成熟度”，这具有铸造神经元的成熟度并将所铸造的数量重新添加到神经元的股份中的效果。如果您希望从神经元中获得收入，您可以将成熟度“生成”到奖励神经元中，该奖励神经元会生成父神经元的，并将此成熟度转移到新神经元的赌注中。需要注意的是，如果您两者都不做，并且以成熟的形式留下这些收益，它不会增加 ICP 的铸造总量，也不会增加您的投票权。
 
@@ -98,7 +98,7 @@ ICP的通货膨胀机制：
 
 - 每年分配用于支付奖励的供应量；
 - 所有神经元的总投票权，因为奖励根据它们的投票权在神经元之间平均分配；
-- 通胀和通缩压力：主要是铸币支付节点提供者和产生奖励，燃烧燃料罐循环，以及上一节提到的其他因素。
+- 通胀和通缩压力：主要是铸币支付节点提供者和产生奖励，燃烧容器循环，以及上一节提到的其他因素。
 
 这些因素会显着影响未来的回报。首先，供应量从创世时的 10% 开始，但在前八年之后将下降到 5%。其次，随着 质押 变得越来越普遍，并且有更好的用户界面来做，自然会有更多的竞争。如果没有其他人下注，回报将是天文数字；但如果几乎每个人都在质押，回报会更低。
 
