--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.5总供应量、流通供应量和质押ICP.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.5总供应量、流通供应量和质押ICP.md
@@ -4,13 +4,13 @@
 
 ## 背景：代币经济学
 
-在我们讨论总供应量和流通供应量之前，了解一下 ICP 的通证经济学是很重要的。ICP是互联网计算机区块链的实用代币。以下是概述 ICP 代币如何帮助互联网计算机区块链运行的核心用例。
+在我们讨论总供应量和流通供应量之前，了解一下 ICP 的代币经济学是很重要的。ICP是互联网计算机区块链的实用代币。以下是概述 ICP 代币如何帮助互联网计算机区块链运行的核心用例。
 
 **1. 节点提供者奖励：**为互联网计算机区块链提供计算/存储基础设施的节点提供者获得 ICP 奖励。每个节点都会收到以法币计算的固定月度奖励，并以 ICP 代币的形式支付。该模型确保了网络为运行节点所承担的成本在法定条件下始终是恒定的。奖励根据节点的地理位置略有不同，以确保 IC 能够实现更广泛的节点地理分布。只要每个节点提供者保证正确的服务质量，他们就会继续获得奖励。奖励是通过铸造新的 ICP 代币来支付的，从而导致通货膨胀。
 
 **2. 治理：** ICP 代币持有者可以质押（锁定）他们的代币来创建神经元。持有神经元使他们能够通过 IC 的链上开放治理系统网络神经系统 (NNS) 来确保投票权。NNS 使神经元持有者（持有 ICP 的人）能够对与升级 IC 协议和在节点机器上运行的软件、加入新节点提供者、将节点机器添加到区块链网络以及创建新的子网区块链等方面的提案进行投票以增加容量。NNS 实现了流动民主：神经元可以跟随其他神经元获得代表投票权。神经元持有者因参与投票过程和帮助治理而从 IC 协议中获得奖励。这些投票奖励也通过铸造新的 ICP 代币来支付，从而导致通货膨胀。
 
-**3. 计算/存储燃料：**在互联网计算机区块链上运行的容器式智能合约计算由“周期”推动。这些Cycles是通过燃烧 ICP 代币获得的。这些Cycles扮演着与以太坊上的“gas”类似的角色。但是，有几个主要区别。最根本的区别之一是以太坊利用“用户付费”，而互联网计算机具有“智能合约付费”模型（有时称为“反向气体”）模型。鉴于以太坊区块链要求最终用户为智能合约在每笔交易中消耗的气体支付费用，在互联网计算机上，Canister 智能合约预充了周期，这样合约就可以有效地为自己的计算付费——让用户从责任。Cycles是通过燃烧 ICP 实用代币产生的，导致通货紧缩。
+**3. 计算/存储燃料：**在互联网计算机区块链上运行的容器式智能合约计算由“周期”推动。这些Cycles是通过燃烧 ICP 代币获得的。这些Cycles扮演着与以太坊上的“gas”类似的角色。但是，有几个主要区别。最根本的区别之一是以太坊利用“用户付费”，而互联网计算机具有“智能合约付费”模型（有时称为“反向气体”）模型。鉴于以太坊区块链要求最终用户为智能合约在每笔交易中消耗的气体支付费用，在互联网计算机上，容器智能合约预充了周期，这样合约就可以有效地为自己的计算付费——让用户从责任。Cycles是通过燃烧 ICP 实用代币产生的，导致通货紧缩。
 
 **4. 交易/提案费用：**当任何 ICP 持有者将其 ICP 从一个钱包转移到另一个钱包时，他们会产生以 ICP 支付的少量交易费用。此外，ICP 持有者在向 NNS 提交新提案时需要支付少量费用。这些费用作为交易的一部分被烧掉，导致通货紧缩。
 
@@ -125,7 +125,7 @@ IC 计算和存储的周期成本可以在[计算和存储成本](https://smartc
 
 ## 影响Cycles供应的历史因素
 
-互联网计算机区块链是多年不懈研发的成果。DFINITY 基金会 Genesis 是 Internet 计算机的主要贡献者，拥有 200 多名全职成员。在过去的几年里，基金会通过三轮主要融资筹集了资金，并以空投活动的形式向社区分配了 ICP 代币。
+互联网计算机区块链是多年不懈研发的成果。DFINITY 基金会 Genesis 是互联网计算机的主要贡献者，拥有 200 多名全职成员。在过去的几年里，基金会通过三轮主要融资筹集了资金，并以空投活动的形式向社区分配了 ICP 代币。
 
 有关不同轮次和归属时间表的细分，请参阅 Messari 的报告[“ICP 简介”](https://messari.io/article/an-introduction-to-dfinity-and-the-internet-computer?referrer=asset:internet-computer)。自创世纪以来，神经元的解锁一直是Cycles供应的**最大贡献因素**，因此了解背景非常重要。
 
