--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.6网络神经系统.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.6网络神经系统.md
@@ -2,7 +2,7 @@
 
 NNS 是一个代币化的开放治理系统，负责管理互联网计算机。例如，NNS 存储有关哪些节点属于哪个子网以及每个副本运行的代码的信息。NNS 还就如何更新此信息和发展 IC 做出决定。
 
-NNS 由一组*[容器](https://wiki.internetcomputer.org/w/index.php?title=容器s&action=edit&redlink=1)*实现。
+NNS 由一组**[容器](https://wiki.internetcomputer.org/w/index.php?title=容器s&action=edit&redlink=1)实现。
 
 ## NNS 容器
 
