--- a/docs/wiki/5.智能合约和Dapp开发人员的互联网计算机/5.2比特币的整合.md
+++ b/docs/wiki/5.智能合约和Dapp开发人员的互联网计算机/5.2比特币的整合.md
@@ -17,9 +17,9 @@
 
 集成的不信任方面依赖于阈值 ECDSA 协议，该协议使子网能够根据容器请求的秘密共享私钥计算 ECDSA 签名。通过该协议，每个容器都可以“控制”大量可派生的 ECDSA 密钥并为其获取签名，从而使容器能够以安全的方式直接在比特币区块链上接收、持有和转移比特币。自然，容器必须能够检索与其比特币地址关联的 UTXO。为此，互联网计算机直接从比特币网络中提取区块。下面将更详细地探讨这种集成的底层架构。
 
-## 建筑学
+## 架构
 
-在本节中，我们将介绍与比特币区块链直接集成的高级架构。集成更改并在 Internet 计算机 (IC) 协议栈的每一层添加组件。
+在本节中，我们将介绍与比特币区块链直接集成的高级架构。集成更改并在互联网计算机 (IC) 协议栈的每一层添加组件。
 
 [![img](https://mywikis-wiki-media.s3.us-central-1.wasabisys.com/internetcomputer/thumb/Bitcoin_integration_architecture.png/900px-Bitcoin_integration_architecture.png)](https://wiki.internetcomputer.org/wiki/File:Bitcoin_integration_architecture.png)
 
