--- a/docs/wiki/5.智能合约和Dapp开发人员的互联网计算机/5.2比特币的整合.md
+++ b/docs/wiki/5.智能合约和Dapp开发人员的互联网计算机/5.2比特币的整合.md
@@ -35,7 +35,7 @@
 
 在每一轮 IC 中，作为共识层核心组件的活跃区块制造者向网络层请求新的比特币区块。网络层检索比特币容器的部分状态，包括比特币容器维护的最近比特币块的标头以及传出交易。这两项都用作向比特币适配器发送比特币块请求的参数。比特币适配器将接收到的块散列与其最近的比特币网络视图相匹配，如果它持有一个块是通过散列表示的块之一的后继块，则返回该块。此外，它将请求中收到的交易添加到队列中，以便将传出交易异步提交到比特币网络。如果比特币适配器返回一个块，
 
-假设在当前的 IC 协议轮次中已经提出了一个包含比特币块的 IC 块。这个 IC 块像往常一样被八卦到子网节点，需要经过公证和最终确定过程。公证过程针对比特币集成进行了扩展：每个副本对 IC 块中包含的比特币块执行确定性有效性检查。至关重要的是，只有在保证该块将被所有诚实副本成功验证的情况下，块制造者才提出一个块，否则子网的共识可能会失败，从而导致整个 IC 块被丢弃。
+假设在当前的 IC 协议轮次中已经提出了一个包含比特币块的 IC 块。这个 IC 块像往常一样被扩散到子网节点，需要经过公证和最终确定过程。公证过程针对比特币集成进行了扩展：每个副本对 IC 块中包含的比特币块执行确定性有效性检查。至关重要的是，只有在保证该块将被所有诚实副本成功验证的情况下，块制造者才提出一个块，否则子网的共识可能会失败，从而导致整个 IC 块被丢弃。
 
 一旦具有比特币块有效负载的 IC 块已成功验证，最终确定将继续进行，无需更改。一旦区块最终确定，比特币有效负载需要在消息路由层中提取并发布到相应的子网队列以执行。当比特币块到达执行层时，它由执行层的 BTC 容器执行：该块被验证，其对比特币区块链的视图相应更新。
 
