--- a/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.3 比特币集成.md
+++ b/docs/wiki/6.为好奇者、研究人员和区块链爱好者准备的互联网计算机/6.3 比特币集成.md
@@ -30,7 +30,7 @@
 
 在每一轮IC中，区块生成器，也是共识层的核心组件，从比特币组件向比特币适配器发送一个请求并获得响应，然后将该响应包含在IC区块的有效载荷中。更准确地说，比特币组件将请求存储在复制状态中，在那里，它被共识层的有效载荷构建器获取。payload builder使用进程间通信将请求转发给外部比特币适配器，比特币适配器处理请求并将结果返回给payload builder。然后payload builder将结果合并到ic区块块中。一个请求包含最近区块头的哈希值，比特币组件拥有交易的区块以及传出交易。比特币适配器将接收到的区块哈希与比特币网络的视图进行比较:如果它的缓存包含一个或多个比特币组件的后续区块，它会返回这些区块。此外，它将在请求中接收到的交易添加到一个队列中，以便向比特币网络异步提交传出交易。
 
-每个IC块都被gossiped[?]到子网节点，并且需要经过公证和结束过程。比特币整合的公证流程进行了扩展:每个副本对IC区块中包含的比特币有效载荷进行确定性有效性的检查。至关重要的是，区块制造者只有在保证该区块将被所有真正的副本成功验证的情况下才提出一个区块，否则子网可能无法达成共识并导致整个IC区块被丢弃。
+每个IC块都被传输到子网节点，并且需要经过公证和结束过程。比特币整合的公证流程进行了扩展:每个副本对IC区块中包含的比特币有效载荷进行确定性有效性的检查。至关重要的是，区块制造者只有在保证该区块将被所有真正的副本成功验证的情况下才提出一个区块，否则子网可能无法达成共识并导致整个IC区块被丢弃。
 
 一旦带有比特币有效载荷的IC块被成功验证，结束过程将继续进行而无需任何更改。当区块最后敲定完，需要在消息路由层提取比特币有效负载，并将其发布到正确的子网队列中进行执行。当比特币有效负载到执行层时，会由执行层的比特币组件执行:
 验证有效负载并相应地更新比特币组件的状态。
