--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.4互联网计算机的治理.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.4互联网计算机的治理.md
@@ -2,7 +2,7 @@
 
 互联网计算机区块链由网络神经系统[[1\]](https://wiki.internetcomputer.org/wiki/Governance_of_the_Internet_Computer#cite_note-1)管理。NNS 是一个算法治理系统，负责监督网络和代币经济，使构建 DeFi dapp、开放互联网服务和企业系统成为可能。
 
-Internet Computer 的 ICP 实用代币持有者可以将其代币锁定在*神经元*中以参与治理并为决策做出贡献，例如投票决定是否应将新的节点集合（也称为子网）添加到网络中.
+互联网计算机的 ICP 实用代币持有者可以将其代币锁定在*神经元*中以参与治理并为决策做出贡献，例如投票决定是否应将新的节点集合（也称为子网）添加到网络中.
 
 ### 为什么互联网计算机需要网络神经系统[[2\]](https://wiki.internetcomputer.org/wiki/Governance_of_the_Internet_Computer#cite_note-2)
 
