--- a/docs/wiki/7.常见问题解答、教程和操作方法/7.6操作方法：创建NNS提案.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/7.6操作方法：创建NNS提案.md
@@ -9,7 +9,7 @@
 具有至少一个ICP和6个月溶解延迟的神经元才可以提交NNS提案。所以，第一步是创建这样一个神经元。
 
 ### 1.2 NNS治理容器接受议案提案
-治理容器与其他容器一样，有一个 Candid 文件，可以接受消息等......本文介绍的方法是，你用本地计算机向治理容器发送消息（代表一个神经元签名），这其中包含一个议案提案。（motion proposal不确定到底该怎么翻译）
+治理容器与其他容器一样，有一个 Candid 文件，可以接受消息等......本文介绍的方法是，你用本地计算机向治理容器发送消息（代表一个神经元签名），这其中包含一个motion提案。
 
 ## 2 一次性设置
 ### 2.1 安装工具
