--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.6网络神经系统.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.6网络神经系统.md
@@ -2,18 +2,18 @@
 
 NNS 是一个代币化的开放治理系统，负责管理互联网计算机。例如，NNS 存储有关哪些节点属于哪个子网以及每个副本运行的代码的信息。NNS 还就如何更新此信息和发展 IC 做出决定。
 
-NNS 由一组**[容器](https://wiki.internetcomputer.org/w/index.php?title=容器s&action=edit&redlink=1)实现。
+NNS 由一组**[容器]**(https://wiki.internetcomputer.org/w/index.php?title=容器s&action=edit&redlink=1)实现。
 
 ## NNS 容器
 
-1. **账本容器：**账本容器存储各本金的ICP实用代*币余额和ICP**交易*历史。
-2. **治理容器：**治理容器接收并存储*提案*，这些提案是关于如何更改 Internet 计算机的建议。然后可以对这些提案进行投票。治理容器还跟踪*神经元*，神经元决定谁可以参与治理。
-3. **注册表容器：**注册表容器存储了整个互联网计算机的配置，例如，哪些节点属于某个子网，每个节点应该运行的软件。
+1. **账本容器**：账本容器存储各本金的ICP实用代*币余额和ICP**交易*历史。
+2. **治理容器**：治理容器接收并存储*提案*，这些提案是关于如何更改 Internet 计算机的建议。然后可以对这些提案进行投票。治理容器还跟踪*神经元*，神经元决定谁可以参与治理。
+3. **注册表容器**：注册表容器存储了整个互联网计算机的配置，例如，哪些节点属于某个子网，每个节点应该运行的软件。
 4. **Cycles 铸币容器**：这个容器子负责铸币*周期*，为计算、通信和存储的容器子提供燃料。当新创建一个新的容器或在现有容器中添加额外的周期时，可以创建新的周期。
 5. **根容器**：根容器是所有其他 NNS 容器的控制器，负责升级它们。
 6. **生命线容器**：生命线容器是根容器的控制器，负责升级它。
 7. **存档容器**：一旦有太多交易无法保存在单个容器中，这些容器就会存储分类帐交易的历史记录。
-8. **创世令牌容器：**这是用于初始化创世期间已经存在的神经元的容器。
+8. **创世令牌容器**：这是用于初始化创世期间已经存在的神经元的容器。
 
 互联网计算机用户最常与之交互的容器是前两个容器：用于进行交易的分类账容器，以及用于质押代币以及提交和投票提案的治理容器。
 
