--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.5总供应量、流通供应量和质押ICP.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.5总供应量、流通供应量和质押ICP.md
@@ -6,9 +6,9 @@
 
 在我们讨论总供应量和流通供应量之前，了解一下 ICP 的代币经济学是很重要的。ICP是互联网计算机区块链的实用代币。以下是概述 ICP 代币如何帮助互联网计算机区块链运行的核心用例。
 
-**1. 节点提供者奖励：**为互联网计算机区块链提供计算/存储基础设施的节点提供者获得 ICP 奖励。每个节点都会收到以法币计算的固定月度奖励，并以 ICP 代币的形式支付。该模型确保了网络为运行节点所承担的成本在法定条件下始终是恒定的。奖励根据节点的地理位置略有不同，以确保 IC 能够实现更广泛的节点地理分布。只要每个节点提供者保证正确的服务质量，他们就会继续获得奖励。奖励是通过铸造新的 ICP 代币来支付的，从而导致通货膨胀。
+**1. 节点提供者奖励**：为互联网计算机区块链提供计算/存储基础设施的节点提供者获得 ICP 奖励。每个节点都会收到以法币计算的固定月度奖励，并以 ICP 代币的形式支付。该模型确保了网络为运行节点所承担的成本在法定条件下始终是恒定的。奖励根据节点的地理位置略有不同，以确保 IC 能够实现更广泛的节点地理分布。只要每个节点提供者保证正确的服务质量，他们就会继续获得奖励。奖励是通过铸造新的 ICP 代币来支付的，从而导致通货膨胀。
 
-**2. 治理：** ICP 代币持有者可以质押（锁定）他们的代币来创建神经元。持有神经元使他们能够通过 IC 的链上开放治理系统网络神经系统 (NNS) 来确保投票权。NNS 使神经元持有者（持有 ICP 的人）能够对与升级 IC 协议和在节点机器上运行的软件、加入新节点提供者、将节点机器添加到区块链网络以及创建新的子网区块链等方面的提案进行投票以增加容量。NNS 实现了流动民主：神经元可以跟随其他神经元获得代表投票权。神经元持有者因参与投票过程和帮助治理而从 IC 协议中获得奖励。这些投票奖励也通过铸造新的 ICP 代币来支付，从而导致通货膨胀。
+**2. 治理**： ICP 代币持有者可以质押（锁定）他们的代币来创建神经元。持有神经元使他们能够通过 IC 的链上开放治理系统网络神经系统 (NNS) 来确保投票权。NNS 使神经元持有者（持有 ICP 的人）能够对与升级 IC 协议和在节点机器上运行的软件、加入新节点提供者、将节点机器添加到区块链网络以及创建新的子网区块链等方面的提案进行投票以增加容量。NNS 实现了流动民主：神经元可以跟随其他神经元获得代表投票权。神经元持有者因参与投票过程和帮助治理而从 IC 协议中获得奖励。这些投票奖励也通过铸造新的 ICP 代币来支付，从而导致通货膨胀。
 
 **3. 计算/存储燃料：**在互联网计算机区块链上运行的容器式智能合约计算由“周期”推动。这些Cycles是通过燃烧 ICP 代币获得的。这些Cycles扮演着与以太坊上的“gas”类似的角色。但是，有几个主要区别。最根本的区别之一是以太坊利用“用户付费”，而互联网计算机具有“智能合约付费”模型（有时称为“反向气体”）模型。鉴于以太坊区块链要求最终用户为智能合约在每笔交易中消耗的气体支付费用，在互联网计算机上，容器智能合约预充了周期，这样合约就可以有效地为自己的计算付费——让用户从责任。Cycles是通过燃烧 ICP 实用代币产生的，导致通货紧缩。
 
@@ -129,13 +129,13 @@ IC 计算和存储的周期成本可以在[计算和存储成本](https://smartc
 
 有关不同轮次和归属时间表的细分，请参阅 Messari 的报告[“ICP 简介”](https://messari.io/article/an-introduction-to-dfinity-and-the-internet-computer?referrer=asset:internet-computer)。自创世纪以来，神经元的解锁一直是Cycles供应的**最大贡献因素**，因此了解背景非常重要。
 
-1.**种子轮，2017 年 2 月：**该轮通过推文进行宣传，并通过下载网络扩展程序向公众开放。DFINITY 从 370 名参与者那里筹集了 390 万瑞士法郎（390 万美元），估值为 1600 万美元，或每个代币 0.03 美元的价格。在 2017 年加密货币牛市期间，它以 ETH 和 BTC 持有这些资金的一部分。种子轮参与者在创世时收到了他们所有的代币，但被质押在 49 个神经元中。每个神经元都有不同的溶解延迟，从 0 到 49 个月不等。因此，这实际上相当于 49 个月的“归属时间表”，请参阅[如何访问“种子”和“空投”ICP 代币并参与互联网计算机网络](https://medium.com/dfinity/how-to-access-seed-and-airdrop-icp-tokens-and-participate-in-the-internet-computer-network-e6cd663a0c3c)。
+1.**种子轮**，2017 年 2 月：该轮通过推文进行宣传，并通过下载网络扩展程序向公众开放。DFINITY 从 370 名参与者那里筹集了 390 万瑞士法郎（390 万美元），估值为 1600 万美元，或每个代币 0.03 美元的价格。在 2017 年加密货币牛市期间，它以 ETH 和 BTC 持有这些资金的一部分。种子轮参与者在创世时收到了他们所有的代币，但被质押在 49 个神经元中。每个神经元都有不同的溶解延迟，从 0 到 49 个月不等。因此，这实际上相当于 49 个月的“归属时间表”，请参阅[如何访问“种子”和“空投”ICP 代币并参与互联网计算机网络](https://medium.com/dfinity/how-to-access-seed-and-airdrop-icp-tokens-and-participate-in-the-internet-computer-network-e6cd663a0c3c)。
 
-2.**战略回合，2018 年 1 月：** DFINITY 筹集了 2054 万美元，占初始供应量的 7.00%（该数字已从之前引用的 6.84% 进行了修订）。从主网启动（2021 年 5 月）开始，该分配将在三年内每月分配一次。参与者包括 Polychain Capital、Andreessen Horowitz、CoinFund、Multicoin Capital 和 Greycroft Partners。本轮是 a16z 投资的第一个代币。Polychain 和 DFINITY 随后合作创建了规模未公开的“DFINITY 生态系统风险基金”（后更名为[“Beacon Fund”](https://dfinity.org/ecosystem/fund/)）。目标是资助能够发展 IC 应用生态系统的新项目。媒体报道称，DFINITY 筹集了更多的 6100 万美元。
+2.**战略轮**，2018 年 1 月： DFINITY 筹集了 2054 万美元，占初始供应量的 7.00%（该数字已从之前引用的 6.84% 进行了修订）。从主网启动（2021 年 5 月）开始，该分配将在三年内每月分配一次。参与者包括 Polychain Capital、Andreessen Horowitz、CoinFund、Multicoin Capital 和 Greycroft Partners。本轮是 a16z 投资的第一个代币。Polychain 和 DFINITY 随后合作创建了规模未公开的“DFINITY 生态系统风险基金”（后更名为[“Beacon Fund”](https://dfinity.org/ecosystem/fund/)）。目标是资助能够发展 IC 应用生态系统的新项目。媒体报道称，DFINITY 筹集了更多的 6100 万美元。
 
-3.**私人销售，2018 年 8 月：** 110 名参与者为初始供应的 4.96% 贡献了 9700 万美元，每个 ICP 代币以 4 瑞士法郎（当时约为 4 美元）的价格出售。该数字已从先前报告的 4.75% 进行了修订。此分配来自主网启动后一年的每月归属时间表。归属于 2021 年 5 月 10 日首次代币分发活动一个月后开始。这一轮的参与者包括 Andreessen Horowitz、Polychain Capital、SV Angel、Aspect Ventures、Electric Capital、ZeroEx、Scalar Capital 和 Multicoin Capital。
+3.**私人销售**，2018 年 8 月： 110 名参与者为初始供应的 4.96% 贡献了 9700 万美元，每个 ICP 代币以 4 瑞士法郎（当时约为 4 美元）的价格出售。该数字已从先前报告的 4.75% 进行了修订。此分配来自主网启动后一年的每月归属时间表。归属于 2021 年 5 月 10 日首次代币分发活动一个月后开始。这一轮的参与者包括 Andreessen Horowitz、Polychain Capital、SV Angel、Aspect Ventures、Electric Capital、ZeroEx、Scalar Capital 和 Multicoin Capital。
 
-4.**空投，2018 年 5 月：**作为早期支持者的邮件列表、论坛和社区的一部分，价值 3500 万美元的 ICP 代币（前身为 DFN）或初始供应量的 0.80% 被空投给了早期支持者。此时，估值达到18.9亿美元。空投参与者在 2020 年 9 月收到了他们的 ICP 代币的 IOU 版本。从 2021 年 5 月 10 日开始的主网启动开始，这一分配的每月分发时间表为一年。
+4.**空投**，2018 年 5 月：作为早期支持者的邮件列表、论坛和社区的一部分，价值 3500 万美元的 ICP 代币（前身为 DFN）或初始供应量的 0.80% 被空投给了早期支持者。此时，估值达到18.9亿美元。空投参与者在 2020 年 9 月收到了他们的 ICP 代币的 IOU 版本。从 2021 年 5 月 10 日开始的主网启动开始，这一分配的每月分发时间表为一年。
 
 ## 结论
 
