--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.1托管选项.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2.1托管选项.md
@@ -9,10 +9,10 @@
 * [Sygnum](https://www.sygnum.com/)
 
 
-### 如果您想的话，那就使用自助托管
+### 如果您想的话，您可以使用自助托管
 * [用NNS fronted dapp托管ICP](https://wiki.internetcomputer.org/wiki/ICP_Custody_with_NNS_frontend_dapp)
 * [用Ledger Nano托管ICP](https://wiki.internetcomputer.org/wiki/ICP_custody_with_Ledger_Nano)
-* 用[Quill](https://github.com/dfinity/quill)托管ICP（冷钱包专用的极简账本和管理工具)网络计算机
+* [用Quill托管ICP（冷钱包专用的极简账本和管理工具)](https://github.com/dfinity/quill)
 * [用种子短语和封闭隔离的设备(air-gapped machine)托管ICP](https://wiki.internetcomputer.org/wiki/ICP_custody_with_seed_phrase_and_air-gapped_machine)
 
 ## 自助托管:让控制最大化的选项
