--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.5总供应量、流通供应量和质押ICP.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.5总供应量、流通供应量和质押ICP.md
@@ -87,7 +87,7 @@ NNS 铸造 ICP 代币有两个原因：
 
 投票奖励率计划的设计目标是 90% 的代币供应被质押在神经元中。考虑到这一目标，在第一年，NNS 分配总供应量的 10% 来产生投票奖励。请注意术语“分配”而不是“铸币厂”，因为在产生、合并或分配神经元之前不会铸币（增加总供应量）。
 
-随着网络随着时间的推移变得更加稳定，该分配率呈二次方下降，直到第 8 年达到 5%。请参见IC 仪表板上[IC Circulation] 页面(https://dashboard.internetcomputer.org/circulation)的下表：
+随着网络随着时间的推移变得更加稳定，该分配率呈二次方下降，直到第 8 年达到 5%。请参见IC 仪表板上[IC Circulation](https://dashboard.internetcomputer.org/circulation) 页面的下表：
 
 [![NNS 铸币年百分比.png](https://mywikis-wiki-media.s3.us-central-1.wasabisys.com/internetcomputer/thumb/NNS_minting_%25_by_year.png/800px-NNS_minting_%25_by_year.png)](https://wiki.internetcomputer.org/wiki/File:NNS_minting_%_by_year.png)
 
