--- a/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md
+++ b/docs/wiki/4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.1ICP代币.md
@@ -26,9 +26,9 @@ ICP 代币用于支付拥有构成 IC 的计算节点的实体节点提供商。
 - 通过互联网计算机协会 (ICA) 或 DFINITY 基金会获得[开发者代币赠款](https://dfinity.org/grants/)
 - 作为节点提供者提供计算能力而获得代币作为报酬
 
-## ICP账户和交易的Ledger容器
+## ICP账户和交易的账本容器
 
-在 IC 上，有关 ICP 代币的信息保存在 Ledger 容器中，该容器是网络神经系统的一个组件。Ledger 容器维护帐户标识符和 (ICP) 代币数量之间的映射。Ledger 提供了一个 API，允许控制帐户的委托人（例如用户或容器）将 ICP 代币转移到任何其他帐户。所有转账都被记录为交易分类容器中的交易。账本还记录了 ICP 代币的铸造和燃烧。
+在 IC 上，有关 ICP 代币的信息保存在账本容器中，该容器是网络神经系统的一个组件。账本容器维护帐户标识符和 (ICP) 代币数量之间的映射。账本容器提供了一个 API，允许控制帐户的委托人（例如用户或容器）将 ICP 代币转移到任何其他帐户。所有转账都被记录为交易分类容器中的交易。账本还记录了 ICP 代币的铸造和燃烧。
 
 对用户的 ICP 帐户和神经元的控制与唯一的主体相关联。委托人标识可用于涉及委托人账户和神经元的操作的授权机制。用户主体源自公共签名密钥的散列，并且为了授权用户在其上创建数字签名的交易。不用说，用户的私人签名密钥应该被安全地生成（例如，具有足够的熵），应该被安全地存储并且应该被备份。根据密钥控制的 ICP 代币（或神经元）的值，用户可以在密钥的安全性和使用密钥所需的摩擦级别之间做出权衡。可以在[此处](管理持有的ICP.md)找到管理 ICP 持有量的用户指南。
 
