--- a/docs/wiki/7.常见问题解答、教程和操作方法/最佳实践.md
+++ b/docs/wiki/7.常见问题解答、教程和操作方法/最佳实践.md
@@ -1,8 +1,8 @@
 # 最佳实践
-本文包含IC生态系统中用户常用的“最佳实践”列表。 
+本文是IC生态系统中用户常用的“最佳实践”列表。 
 ## 质押的最佳实践
-* [管理ICP](https://wiki.internetcomputer.org/wiki/Managing_ICP_holdings)
-* [投票和NNS奖励最大化](https://wiki.internetcomputer.org/wiki/Maximizing_Voting_and_NNS_Rewards)
+* [管理持有的ICP](4.ICP代币持有者、质押者和神经元持有者的互联网计算机/4.2管理持有的ICP.md)
+* [投票和NNS奖励最大化](7.3投票和NNS奖励最大化.md)
 
 ## 使用IC dapps的最佳实践
-* [管理互联网身份](https://wiki.internetcomputer.org/wiki/Managing_Internet_Identity)
+* [管理互联网身份](7.2管理互联网身份.md)
