Update and rename docs/wiki/7.常见问题解答、教程和操作方法/为wiki做出贡献.md to docs/wiki/8.常见问题解答、教程和操作方法/8.9为wiki做出贡献.md

--- a/docs/wiki/8.常见问题解答、教程和操作方法/8.9为wiki做出贡献.md
+++ b/docs/wiki/8.常见问题解答、教程和操作方法/8.9为wiki做出贡献.md
@@ -1,4 +1,4 @@
-# 为Wiki做出贡献
+# 8.9 为Wiki做出贡献
 本wiki的内容由IC社区维护并为IC社区服务。为了建立可靠的内容来源和社区，请参阅此页面。
 ## 如何贡献
 每个人都可以为这个wiki做出贡献，只需[创建一个帐户](https://wiki.internetcomputer.org/wiki/Special:CreateAccount)即可。
