--- a/docs/wiki/7.面向节点提供者&技术工作小组/7.3IC OS 安装操作手册 - Dell Poweredge.md
+++ b/docs/wiki/7.面向节点提供者&技术工作小组/7.3IC OS 安装操作手册 - Dell Poweredge.md
@@ -1,4 +1,4 @@
-# IC OS 安装操作手册 - Dell Poweredge
+# 7.3 IC OS 安装操作手册 - Dell Poweredge
 
 本手册涵盖了安装 Internet 计算机操作系统（以下称为 IC-OS）所需的所有步骤。物理机预计将根据各自的手册进行上架和堆叠。如果您在安装过程中遇到任何问题，我们恳请您将带有错误消息的电子邮件发送至： support@internetcomputer.org
 
