--- a/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
+++ b/docs/wiki/1.互联网计算机介绍/1.2互联网计算机概述.md
@@ -62,7 +62,7 @@
 
 ## 代币
 
-互联网计算机使用实用代币ICP。 持有人可以质押ICP，让他们参与互联网计算机的治理并获得投票奖励。 ICP 也可以转换为circles并用于为容器的计算、通信和存储成本提供动力。 区块链包含一个“反向气体”（reverse gas）模型，其中智能合约为自己的计算付费，并且必须预充cycles（pre-charged with cycles）才能运行，就像电动汽车必须预充电才能驱动一样。 这确保了 dapp、系统和服务的最终用户可以通过网络与他们进行交互，而无需代币来为他们发起的计算付费。 互联网计算机保持浮动转换率，因此 1 万亿个cycles在 ICP 中的成本约为 1 IMF SDR。
+互联网计算机使用实用代币ICP。 持有人可以质押ICP，让他们参与互联网计算机的治理并获得投票奖励。 ICP 也可以转换为cycles并用于为容器的计算、通信和存储成本提供动力。 区块链包含一个“反向气体”（reverse gas）模型，其中智能合约为自己的计算付费，并且必须预充cycles（pre-charged with cycles）才能运行，就像电动汽车必须预充电才能驱动一样。 这确保了 dapp、系统和服务的最终用户可以通过网络与他们进行交互，而无需代币来为他们发起的计算付费。 互联网计算机保持浮动转换率，因此 1 万亿个cycles在 ICP 中的成本约为 1 IMF SDR。
 
 ## 内部构件
 
